[package]
name = "quilt"
version = "1.0.2"
description = "A command-line utility for modifying archive files and compression used in Kula Quest."
authors = ["Brandon Gardenhire (@saturnkai)"]
license = "MIT"
repository = "https://github.com/kulaworkshop/quilt"
edition = "2024"

[profile.release]
strip = true
codegen-units = 1

[build-dependencies]
cc = "1.2.34"
winres = "0.1.12"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.2"
libc = "0.2.175"
